--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astro-community/astro-embed-youtube": "^0.5.6",
     "@storyblok/astro": "^7.2.0",
     "@tailwindcss/vite": "^4.1.11",
     "astro": "^5.11.1",
     "dotenv": "^17.2.0",
     "storyblok-js-client": "^7.1.0",
     "tailwindcss": "^4.1.11",
+    "typed.js": "^2.1.0",
     "vite": "^6.3.5"
   },
   "devDependencies": {
