--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@astro-community/astro-embed-youtube": "^0.5.6",
+    "@astrojs/vercel": "^8.2.6",
     "@storyblok/astro": "^7.2.0",
     "@tailwindcss/vite": "^4.1.11",
     "astro": "^5.11.1",
